# kraken

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: dep_OpenUSD.cmake
hdkraken/: CMakeLists.txt  plugInfo.json.in
hdkraken/src/: mesh.cpp  mesh.h  renderDelegate.cpp  renderDelegate.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h
scripts/: buildUSD.sh
viewer/: CMakeLists.txt  viewer.cpp
